# chiploop-saas

./: .tmp_generated_test_sram.py  PHASE7G_SELECT_AND_GENERATE_MISSING_AGENTS_REVIEW.md  PHASE7H_DAG_WORKFLOW_OPTIMIZATION_REVIEW.md  package-lock.json  package.json
backend/: .dockerignore  AGENT_RUNTIME_MIGRATION_REPORT.md  CHIPLOOP_STUDIO_CONTRACTS.md  Dockerfile  PHASE15A_VOICE_DESIGN_SESSION.md  PHASE3_CODEX_STUDIO_AGENT_FACTORY.md  PHASE4A_API_KEYS_USAGE.md  PHASE4_SDK_CLI.md  PHASE5_WORKFLOW_DAG.md  PHASE6_PRODUCTION_PERSISTENCE.md  PHASE6_SCHEMA_REUSE_REPORT.md  PHASE7H_7I_PRIVATE_AGENTS_MARKETPLACE.md  PHASE7_BACKEND_ENDPOINTS.md  PHASE8A_PLANS_CREDITS.md  PHASE8D_PRICING_AND_UPGRADE.md  PHASE8D_TRIAL_AND_UPGRADE_FLOW.md  PHASE8E_DEMO_TO_TRIAL_FLOW.md  PHASE_MARKETPLACE_ECOSYSTEM.md  PHASE_ONBOARDING_ARCH2RTL.md  PHASE_STRIPE_BILLING.md  PHASE_WEBINAR_SESSIONS_AND_ZOOM.md  STUDIO_CONTRACT_MIGRATION_REPORT.md  agent_capabilities.py  arch_doc_agent.py  artifact_policy.py  browser_auth.py  browser_routes.py  deployment_modes.py  deployment_readiness.py  design.out  design.v  design_optimized.v  digital_testbench_generator_agent.py  integration_doc_agent.py  license_policy.py  main.py  optimizer_agent.py  platform_browser_api.py  platform_services.py  pyproject.toml  (+3 more)
backend/.chiploop/: local_api_keys.json
backend/agents/: agent_generator.py  agent_selector.py  arch_doc_agent.py  assertion.py  assertion_agent.py  base_agent.py  base_agent_behavioral_template.txt  coverage_agent.py  covergroup_agent.py  integration_doc_agent.py  optimizer_agent.py  rtl_agent.py  (+5 more)
(+2734 files in other folders)
